# Novodex

./: CMakeLists.txt  README.md  changes.txt
Foundation/doc/: FoundationSDK.chi  FoundationSDK.chm
Foundation/include/: Nx.h  Nx12F32.h  Nx16F32.h  NxAllocateable.h  NxAllocatorDefault.h  NxArray.h  NxBitField.h  NxBlank.h  NxBounds3.h  NxDebugRenderable.h  NxDefaultTriangleMesh.h  NxException.h  NxFPU.h  NxFoundation.h  NxFoundationSDK.h  NxList.h  NxMat33.h  NxMat34.h  NxMath.h  NxPlane.h  NxQuat.h  NxQuickSort.h  NxSimpleTriangleMesh.h  NxSimpleTypes.h  NxSphere.h  NxUserAllocator.h  NxUserAllocatorAccess.h  NxUserAllocatorDefault.h  NxUserDebugRenderer.h  NxUserOutputStream.h  NxUtilities.h  Nxf.h
Foundation/src/: Box.cpp  Capsule.cpp  CustomArray.cpp  CustomArray.h  DebugRenderable.cpp  DefaultAllocator.cpp  DefaultTriangleMesh.cpp  Exception.cpp  FPU.cpp  FlexibleTriangleMesh.cpp  FoundationSDK.cpp  Observable.cpp  Profiler.cpp  Ray.cpp  Segment.cpp  Sphere.cpp  Time.cpp  Utilities.cpp  VolumeIntegration.cpp
Physics/doc/: PhysicsSDK.chi  PhysicsSDK.chm
Physics/include/: NxActor.h  NxActorDesc.h  NxBodyDesc.h  NxBoxShape.h  NxCapsuleShape.h  NxCapsuleShapeDesc.h  NxContactStreamIterator.h  NxConvexHull.h  NxCylindricalJoint.h  NxEffector.h  NxInertiaTensor.h  NxIntersectionPointTriangle.h  NxIntersectionRayPlane.h  NxIntersectionRaySphere.h  NxIntersectionSegmentBox.h  NxJoint.h  NxJointDesc.h  NxMaterial.h  NxMotorDesc.h  NxPhysics.h  NxPhysicsSDK.h  NxPlaneShape.h  NxPointInPlaneJoint.h  NxPointOnLineJoint.h  NxPrismaticJoint.h  NxRevoluteJoint.h  NxRevoluteJointDesc.h  NxScene.h  NxSceneDesc.h  NxShape.h  NxShapeDesc.h  NxSmoothNormals.h  NxSphereShape.h  NxSphericalJoint.h  NxSpringAndDamperEffector.h  NxSpringAndDamperEffectorDesc.h  NxTriangle.h  NxTriangleMesh.h  NxTriangleMeshDesc.h  NxTriangleMeshShape.h  (+5 more)
(+14 files in other folders)
